<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.sanjeev.battleofmesoketes.viewmodel.BattleViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblDay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_1_text"
            android:textSize="@dimen/default_label_size"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llDay1"
            android:layout_below="@id/lblDay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEast1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/east_text"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtEast1TextWatcher}"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/etWest1"
                android:layout_width="0dp"
                android:hint="@string/west_text"
                android:layout_weight="1"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtWest1TextWatcher}"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/etSouth1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtSouth1TextWatcher}"
                android:hint="@string/south_text"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/etNorth1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtNorth1TextWatcher}"
                android:hint="@string/north_text"
                android:layout_height="match_parent" />

        </LinearLayout>

        <TextView
            android:id="@+id/lblDay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_2_text"
            android:layout_below="@+id/llDay1"
            android:textSize="@dimen/default_label_size"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llDay2"
            android:layout_below="@id/lblDay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEast2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtEast2TextWatcher}"
                android:hint="@string/east_text"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/etWest2"
                android:layout_width="0dp"
                android:hint="@string/west_text"
                android:layout_weight="1"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtWest2TextWatcher}"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/etSouth2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtSouth2TextWatcher}"
                android:hint="@string/south_text"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/etNorth2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtNorth2TextWatcher}"
                android:hint="@string/north_text"
                android:layout_height="match_parent" />

        </LinearLayout>

        <TextView
            android:id="@+id/lblDay3"
            android:layout_below="@+id/llDay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_3_text"
            android:textSize="@dimen/default_label_size"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llDay3"
            android:layout_below="@id/lblDay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEast3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtEast3TextWatcher}"
                android:hint="@string/east_text"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/etWest3"
                android:layout_width="0dp"
                android:hint="@string/west_text"
                android:layout_weight="1"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtWest3TextWatcher}"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/etSouth3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtSouth3TextWatcher}"
                android:hint="@string/south_text"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/etNorth3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.getEtNorth3TextWatcher}"
                android:hint="@string/north_text"
                android:layout_height="match_parent" />

        </LinearLayout>

        <Button
            android:id="@+id/btnResult"
            android:layout_margin="@dimen/default_margin"
            android:layout_below="@+id/llDay3"
            android:onClick="@{()-> viewModel.onResultClicked()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_get_result"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/btnResult"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="@dimen/default_margin"
                android:layout_width="wrap_content"
                android:text="@string/result_text"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"/>

            <TextView
                android:id="@+id/tvResult"
                android:layout_margin="@dimen/default_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"/>

        </LinearLayout>



        <TextView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_note_size"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/instruction_note"/>

    </RelativeLayout>
</layout>